<resources>
    <string name="app_name">Roomies</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_in">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Continuar</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="nombre">Nombre *</string>
    <string name="primer_apellido">Primer apellido *</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="ciudad">Ciudad *</string>
    <string name="edad">Edad *</string>
    <string name="centro_de_estudios">Centro de estudios *</string>
    <string name="correo_electronico">Correo electrónico *</string>
    <string name="campo_obligatorio">* Campo obligatorio</string>
    <string name="continuar">Continuar</string>
    <string name="creacion_de_perfil">Creación de perfil</string>
    <string name="n_mero_de_habitaciones">Número de habitaciones *</string>
    <string name="calle">Calle *</string>
    <string name="portal">Portal *</string>
    <string name="piso">Piso *</string>
    <string name="datos_del_piso">Datos del piso</string>
    <string name="ciudadApp">Ciudad</string>
    <string name="buscar_pisos">Buscar pisos</string>
    <string name="omitir">Omitir</string>
    <string name="direccion">Dirección:</string>
    <string name="contacto">Contacto:</string>
    <string name="n_habitaciones">Número de habitaciones:</string>
    <string name="borrar_cuenta">¿Deseas borrar tu cuenta?</string>
    <string name="cambio_irreversible">El cambio es irreversible, ¿deseas continuar?</string>
    <string name="apellidos">Apellidos *</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="header_app_info">Roomies App roomies.alonso@gmail.com</string>
    <string name="menu_editar_perfil">Editar Perfil</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_borrar_cuenta">Borrar Cuenta</string>
    <string name="navigation_drawer_open">Navigation drawer open\n</string>
    <string name="navigation_drawer_close">Navigation drawer close\n</string>
    <string name="menu_editar_piso">Editar Piso</string>
    <string name="direccionEP">Dirección *</string>
    <string name="metros">Metros² *</string>
    <string name="alquiler">Alquiler *</string>
    <string name="datosPiso">Datos: </string>
    <string name="filtro_alquiler">Alquiler (más baratos primero)</string>
    <string name="filtro_habitaciones">Habitaciones (más habitaciones primero)</string>
    <string name="filtro_metros">Metros² (más metros primero)</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>