<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pisoFoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/piso" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/contacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/habitaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_habitaciones"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>